# libminst

./: CMakeLists.txt  README.md  minst.c  minst.h  pyminst.cpp
demo/c/: main.c
demo/python/: test.py
